version/0.5/_sources/_autosummary/ansys.api.pyensight.ens_part_fx_vortex_core.ENS_PART_FX_VORTEX_CORE.rst.txt
ENS\_PART\_FX\_VORTEX\_CORE
===========================

.. currentmodule:: ansys.api.pyensight.ens_part_fx_vortex_core

.. autoclass:: ENS_PART_FX_VORTEX_CORE

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ENS_PART_FX_VORTEX_CORE.attrgroupinfo
      
      
      ENS_PART_FX_VORTEX_CORE.attrinfo
      
      
      ENS_PART_FX_VORTEX_CORE.attrissensitive
      
      
      ENS_PART_FX_VORTEX_CORE.attrtree
      
      
      ENS_PART_FX_VORTEX_CORE.cmdlang_rec_info
      
      
      ENS_PART_FX_VORTEX_CORE.createpart
      
      
      ENS_PART_FX_VORTEX_CORE.destroy
      
      
      ENS_PART_FX_VORTEX_CORE.get_values
      
      
      ENS_PART_FX_VORTEX_CORE.getattr
      
      
      ENS_PART_FX_VORTEX_CORE.getattrs
      
      
      ENS_PART_FX_VORTEX_CORE.getmetatag
      
      
      ENS_PART_FX_VORTEX_CORE.hasmetatag
      
      
      ENS_PART_FX_VORTEX_CORE.populate_attr_list
      
      
      ENS_PART_FX_VORTEX_CORE.realtimemode
      
      
      ENS_PART_FX_VORTEX_CORE.setattr
      
      
      ENS_PART_FX_VORTEX_CORE.setattr_begin
      
      
      ENS_PART_FX_VORTEX_CORE.setattr_end
      
      
      ENS_PART_FX_VORTEX_CORE.setattr_status
      
      
      ENS_PART_FX_VORTEX_CORE.setattrs
      
      
      ENS_PART_FX_VORTEX_CORE.setmetatag
      
      
      ENS_PART_FX_VORTEX_CORE.tracepaths
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ENS_PART_FX_VORTEX_CORE.ACTIVE
      ENS_PART_FX_VORTEX_CORE.ADJCOORDSCALEFACTOR
      ENS_PART_FX_VORTEX_CORE.ADJCOORDTRANSVEC
      ENS_PART_FX_VORTEX_CORE.ADJCOORDVARSCALEFACTOR
      ENS_PART_FX_VORTEX_CORE.ADJCOORDXVARIABLE
      ENS_PART_FX_VORTEX_CORE.ADJCOORDYVARIABLE
      ENS_PART_FX_VORTEX_CORE.ADJCOORDZVARIABLE
      ENS_PART_FX_VORTEX_CORE.ALPHABY
      ENS_PART_FX_VORTEX_CORE.ALPHABYPALETTE
      ENS_PART_FX_VORTEX_CORE.BOUNDINGREP
      ENS_PART_FX_VORTEX_CORE.CASENUMBER
      ENS_PART_FX_VORTEX_CORE.CLIP
      ENS_PART_FX_VORTEX_CORE.COLORBYPALETTE
      ENS_PART_FX_VORTEX_CORE.COLORBYRGB
      ENS_PART_FX_VORTEX_CORE.CULLELEMENTS
      ENS_PART_FX_VORTEX_CORE.DENSITY
      ENS_PART_FX_VORTEX_CORE.DESCRIPTION
      ENS_PART_FX_VORTEX_CORE.DISPLACEBY
      ENS_PART_FX_VORTEX_CORE.DISPLACEFACTOR
      ENS_PART_FX_VORTEX_CORE.DOUBLESIDED
      ENS_PART_FX_VORTEX_CORE.DTA_BLOCK
      ENS_PART_FX_VORTEX_CORE.EDIT_TARGET
      ENS_PART_FX_VORTEX_CORE.ELTBLANKING
      ENS_PART_FX_VORTEX_CORE.ELTDEFINEDBY
      ENS_PART_FX_VORTEX_CORE.ELTFEATUREANGLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER1ACTIVE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER1TESTOP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER1TESTVALUE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER1TESTVARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER1TESTVARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER1VARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER1VARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER2ACTIVE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER2LOGICALOP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER2TESTOP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER2TESTVALUE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER2TESTVARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER2TESTVARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER2VARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER2VARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER3ACTIVE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER3LOGICALOP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER3TESTOP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER3TESTVALUE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER3TESTVARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER3TESTVARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER3VARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER3VARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER4ACTIVE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER4LOGICALOP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER4TESTOP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER4TESTVALUE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER4TESTVARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER4TESTVARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER4VARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER4VARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER5ACTIVE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER5LOGICALOP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER5TESTOP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER5TESTVALUE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER5TESTVARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER5TESTVARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER5VARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER5VARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER6ACTIVE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER6LOGICALOP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER6TESTOP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER6TESTVALUE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER6TESTVARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER6TESTVARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTFILTER6VARCOMP
      ENS_PART_FX_VORTEX_CORE.ELTFILTER6VARIABLE
      ENS_PART_FX_VORTEX_CORE.ELTREPPOINTSNORMALS
      ENS_PART_FX_VORTEX_CORE.ELTREPRESENTATION
      ENS_PART_FX_VORTEX_CORE.ELTSHRINKFACTOR
      ENS_PART_FX_VORTEX_CORE.ENS_DETAILS
      ENS_PART_FX_VORTEX_CORE.ENS_KIND
      ENS_PART_FX_VORTEX_CORE.ENS_MATERIAL
      ENS_PART_FX_VORTEX_CORE.ENS_PARENT_PART
      ENS_PART_FX_VORTEX_CORE.ENS_PLIST_KEY_SEL_0
      ENS_PART_FX_VORTEX_CORE.ENS_PLIST_KEY_SEL_1
      ENS_PART_FX_VORTEX_CORE.ENS_PLIST_KEY_SEL_2
      ENS_PART_FX_VORTEX_CORE.ENS_PLIST_KEY_SEL_3
      ENS_PART_FX_VORTEX_CORE.ENS_PLIST_KEY_SEL_4
      ENS_PART_FX_VORTEX_CORE.ENS_PLIST_KEY_SEL_5
      ENS_PART_FX_VORTEX_CORE.ENS_PLIST_KEY_SEL_6
      ENS_PART_FX_VORTEX_CORE.ENS_PLIST_KEY_SEL_7
      ENS_PART_FX_VORTEX_CORE.ENS_PLIST_KEY_SEL_8
      ENS_PART_FX_VORTEX_CORE.ENS_PLIST_KEY_SEL_9
      ENS_PART_FX_VORTEX_CORE.ENS_SYMMETRY_AXIS
      ENS_PART_FX_VORTEX_CORE.ENS_SYMMETRY_COUNT
      ENS_PART_FX_VORTEX_CORE.ENS_TURBO_STAGE
      ENS_PART_FX_VORTEX_CORE.ENS_TURBO_VDIM
      ENS_PART_FX_VORTEX_CORE.ENS_TURBO_VIEW
      ENS_PART_FX_VORTEX_CORE.ENS_UNITS_LABEL
      ENS_PART_FX_VORTEX_CORE.ENTITYLABELELT
      ENS_PART_FX_VORTEX_CORE.ENTITYLABELNODE
      ENS_PART_FX_VORTEX_CORE.FILLPATTERN
      ENS_PART_FX_VORTEX_CORE.HANDLES_ENABLED
      ENS_PART_FX_VORTEX_CORE.HAS0DELEMENTS
      ENS_PART_FX_VORTEX_CORE.HAS1DELEMENTS
      ENS_PART_FX_VORTEX_CORE.HAS2DELEMENTS
      ENS_PART_FX_VORTEX_CORE.HAS3DELEMENTS
      ENS_PART_FX_VORTEX_CORE.HIDDENLINE
      ENS_PART_FX_VORTEX_CORE.HIDDENSURFACE
      ENS_PART_FX_VORTEX_CORE.IJKAXIS
      ENS_PART_FX_VORTEX_CORE.IJKAXISSCALE
      ENS_PART_FX_VORTEX_CORE.ISGROUP
      ENS_PART_FX_VORTEX_CORE.LIGHTAMBIENT
      ENS_PART_FX_VORTEX_CORE.LIGHTDIFFUSE
      ENS_PART_FX_VORTEX_CORE.LIGHTEMISSIVE
      ENS_PART_FX_VORTEX_CORE.LIGHTREFRACTION
      ENS_PART_FX_VORTEX_CORE.LIGHTSPECULARINTENSITY
      ENS_PART_FX_VORTEX_CORE.LIGHTSPECULARREFLECTION
      ENS_PART_FX_VORTEX_CORE.LIGHTSPECULARSHINE
      ENS_PART_FX_VORTEX_CORE.LIGHTSPECULARTINT
      ENS_PART_FX_VORTEX_CORE.LINESTYLE
      ENS_PART_FX_VORTEX_CORE.LINEWIDTH
      ENS_PART_FX_VORTEX_CORE.LPARTPARENT
      ENS_PART_FX_VORTEX_CORE.MATERIALBASETYPE
      ENS_PART_FX_VORTEX_CORE.MATERIALDESCRIPTION
      ENS_PART_FX_VORTEX_CORE.MESHTYPE
      ENS_PART_FX_VORTEX_CORE.METADATA
      ENS_PART_FX_VORTEX_CORE.METHOD
      ENS_PART_FX_VORTEX_CORE.MIRRORORIGINAL
      ENS_PART_FX_VORTEX_CORE.MOMENTUM
      ENS_PART_FX_VORTEX_CORE.NODEDETAIL
      ENS_PART_FX_VORTEX_CORE.NODERANGESTEPI
      ENS_PART_FX_VORTEX_CORE.NODERANGESTEPJ
      ENS_PART_FX_VORTEX_CORE.NODERANGESTEPK
      ENS_PART_FX_VORTEX_CORE.NODESCALE
      ENS_PART_FX_VORTEX_CORE.NODESIZEBY
      ENS_PART_FX_VORTEX_CORE.NODETYPE
      ENS_PART_FX_VORTEX_CORE.NODEVARIABLE
      ENS_PART_FX_VORTEX_CORE.OPAQUENESS
      ENS_PART_FX_VORTEX_CORE.PARENT
      ENS_PART_FX_VORTEX_CORE.PARTNUMBER
      ENS_PART_FX_VORTEX_CORE.PARTNUMELE
      ENS_PART_FX_VORTEX_CORE.PARTNUMELECLIENT
      ENS_PART_FX_VORTEX_CORE.PARTTYPE
      ENS_PART_FX_VORTEX_CORE.PARTTYPEENUM
      ENS_PART_FX_VORTEX_CORE.PATHNAME
      ENS_PART_FX_VORTEX_CORE.PERIODICSECTIONS
      ENS_PART_FX_VORTEX_CORE.PREDEFINEDMATERIAL
      ENS_PART_FX_VORTEX_CORE.PROJECT_MASK
      ENS_PART_FX_VORTEX_CORE.RATIOOFSPECHEAT
      ENS_PART_FX_VORTEX_CORE.REDUCEPOLYGONS
      ENS_PART_FX_VORTEX_CORE.REDUCEPOLYGONSFACTOR
      ENS_PART_FX_VORTEX_CORE.REFFRAME
      ENS_PART_FX_VORTEX_CORE.RENDERINGREFLECTIONID
      ENS_PART_FX_VORTEX_CORE.REVERSENORMAL
      ENS_PART_FX_VORTEX_CORE.SELECTED
      ENS_PART_FX_VORTEX_CORE.SHADING
      ENS_PART_FX_VORTEX_CORE.SHOWSFT
      ENS_PART_FX_VORTEX_CORE.SOURCES
      ENS_PART_FX_VORTEX_CORE.SPECIFYSYMMETRYORIGIN
      ENS_PART_FX_VORTEX_CORE.SYMMETRYANGLE
      ENS_PART_FX_VORTEX_CORE.SYMMETRYAXIS
      ENS_PART_FX_VORTEX_CORE.SYMMETRYDELTA
      ENS_PART_FX_VORTEX_CORE.SYMMETRYMIRRORX
      ENS_PART_FX_VORTEX_CORE.SYMMETRYMIRRORXY
      ENS_PART_FX_VORTEX_CORE.SYMMETRYMIRRORXYZ
      ENS_PART_FX_VORTEX_CORE.SYMMETRYMIRRORXZ
      ENS_PART_FX_VORTEX_CORE.SYMMETRYMIRRORY
      ENS_PART_FX_VORTEX_CORE.SYMMETRYMIRRORYZ
      ENS_PART_FX_VORTEX_CORE.SYMMETRYMIRRORZ
      ENS_PART_FX_VORTEX_CORE.SYMMETRYORIGIN
      ENS_PART_FX_VORTEX_CORE.SYMMETRYRINSTANCES
      ENS_PART_FX_VORTEX_CORE.SYMMETRYTYPE
      ENS_PART_FX_VORTEX_CORE.TEXTURECOORDTYPE
      ENS_PART_FX_VORTEX_CORE.TEXTUREINTERPOLATION
      ENS_PART_FX_VORTEX_CORE.TEXTUREMODE
      ENS_PART_FX_VORTEX_CORE.TEXTUREOBJECT
      ENS_PART_FX_VORTEX_CORE.TEXTUREORIGIN
      ENS_PART_FX_VORTEX_CORE.TEXTUREORIGINNODEID
      ENS_PART_FX_VORTEX_CORE.TEXTUREORIGINUSE
      ENS_PART_FX_VORTEX_CORE.TEXTUREREPEATMODE
      ENS_PART_FX_VORTEX_CORE.TEXTURESORIGINNODEID
      ENS_PART_FX_VORTEX_CORE.TEXTURESVARIABLE
      ENS_PART_FX_VORTEX_CORE.TEXTURESVECTOR
      ENS_PART_FX_VORTEX_CORE.TEXTURETORIGINNODEID
      ENS_PART_FX_VORTEX_CORE.TEXTURETVARIABLE
      ENS_PART_FX_VORTEX_CORE.TEXTURETVECTOR
      ENS_PART_FX_VORTEX_CORE.THRESHOLD
      ENS_PART_FX_VORTEX_CORE.THRESHOLDFILTER
      ENS_PART_FX_VORTEX_CORE.THRESHOLDMAX
      ENS_PART_FX_VORTEX_CORE.THRESHOLDMIN
      ENS_PART_FX_VORTEX_CORE.THRESHOLDVALUE
      ENS_PART_FX_VORTEX_CORE.UUID
      ENS_PART_FX_VORTEX_CORE.VELOCITY
      ENS_PART_FX_VORTEX_CORE.VIEWPORTVIS
      ENS_PART_FX_VORTEX_CORE.VISIBILITYELT
      ENS_PART_FX_VORTEX_CORE.VISIBILITYLINE
      ENS_PART_FX_VORTEX_CORE.VISIBILITYNODE
      ENS_PART_FX_VORTEX_CORE.VISIBLE
      ENS_PART_FX_VORTEX_CORE.VOLUMEQUALITY
      ENS_PART_FX_VORTEX_CORE.VOLUMERENDERINGTYPE
      ENS_PART_FX_VORTEX_CORE.__OBJID__
      ENS_PART_FX_VORTEX_CORE.objid
   
   